AP-2008-10-30-0: Bugfix:      Updating Changelog entry
                 Belongs to:  AP-2008-10-20-0

AP-2008-10-20-0: Bugfix:      adding the missing file BigDecimalField.java
                 Belongs to:  AP-2008-10-17-0
                 Review:      JO

AP-2008-10-17-0: Bugfix:      All foreign and primary keys in db_definition.xml
                              should be defined as bigint
                 Bugster:     6717825
                 Issue:       2626
                 Review:      JO

JO-2008-09-25-0: Enhancem.:   Fixed Cangelog entry

JO-2008-09-10-0: Bugfix:      dbwriter keeps crashing due to inability to close the open cursors   
                 Bugster:     6745913
                 Issue:       2722
                 Review:      LP

JO-2008-09-03-0: Bugfix:      dbwriter installation fails if admin_user in bootstrap file is 'none'    
                 Bugster:     6743431
                 Issue:       2712
                 Review:      LP

JO-2008-09-02-0: Bugfix:      error() appears after 'Dbwriter configuration file' section in installation
                 Bugster:     6743621
                 Issue:       2713
                 Review:      AP

JO-2008-08-29-0: Bugfix:      parameters are not replaced during database connection test
                 Bugster:     6742976
                 Issue:       2708
                 Bugfix:      Correction of commit: AP-2008-08-14-0
                 Review:      AP

JO-2008-08-27-0: Bugfix:      reporting installation fails with SJWC 3.0.x if $JAVA_HOME is not set to java version at least 1.5
                 Bugster:     6740388
                 Issue:       2696
                 Bugfix:      dbwriter installation doesn't exit when an SQL error happens during database install/upgrade
                 Bugster:     6740404
                 Issue:       2697
                 Review:      AP

AP-2008-08-14-0: Bugfix:      Instalation script for reporting "assumes" correct