@@ -1,3 +1,10 @@
+AP-2009-01-26-0: Bugfix:      File permissions must be set by admin user
+                 Bugfix:      Existing model 'Object' is not assignable from type
+                              [com.sun.grid.arco.sql.SQLQueryResult] exception
+                 Bugster:     6797583
+                 Issue:       2889
+                 Review:      JO
+
 AP-2008-10-30-0: Bugfix:      Updating Changelog entry
                  Belongs to:  AP-2008-10-20-0
 
